fixed horizontal scroll

--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,8 @@
 
 body{
     background: #363636;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 .wrapper .sidebar{
